--- a/gofetch/public/index.html
+++ b/gofetch/public/index.html
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Go Fish!</title>
+    <title>♤ ♧ Go Fetch!♥︎ ♦︎</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -45,25 +45,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div class="glowing">
-      <div style="--i: 1"></div>
-      <div style="--i: 2"></div>
-      <div style="--i: 3"></div>
-    </div>
-    <div class="glowing">
-      <div style="--i: 1"></div>
-      <div style="--i: 2"></div>
-      <div style="--i: 3"></div>
-    </div>
-    <div class="glowing">
-      <div style="--i: 1"></div>
-      <div style="--i: 2"></div>
-      <div style="--i: 3"></div>
-    </div>
-    <div class="glowing">
-      <div style="--i: 1"></div>
-      <div style="--i: 2"></div>
-      <div style="--i: 3"></div>
-    </div>
   </body>
 </html>
